add gcc to brew install

--- a/install_f4pga.tex
+++ b/install_f4pga.tex
@@ -6,6 +6,7 @@ These instructions are based partially on the getting f4pga instructions. \href{
     brew install git
     brew install wget
     brew install xz
+    brew install gcc
 \end{minted}
 
 These are required by various pieces of the toolchain so we may as well get installing them dealt with.
