adding some missing libraries

--- a/install_f4pga.tex
+++ b/install_f4pga.tex
@@ -7,6 +7,11 @@ These instructions are based partially on the getting f4pga instructions. \href{
     brew install wget
     brew install xz
     brew install gcc
+    brew install cmake
+    brew install pkg-config
+    brew install tbb
+    brew install eigen
+
 \end{minted}
 
 These are required by various pieces of the toolchain so we may as well get installing them dealt with.
